--- a/Index.html
+++ b/Index.html
@@ -9,5 +9,6 @@
   <body>
     <header>ini halaman header</header>
     <p>ini di fitur-a</p>
+    <p>ini ada tambahan pembagaian</p>
   </body>
 </html>
