Revert " yang kedua"
This reverts commit 5d4053c97841de246a98d0ebd9029457ee21023b.

--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <header>ini halaman header</header>
+    <<<<<<< HEAD
     <p>ini di fitur-a</p>
     <p>ini ada tambahan pembagaian</p>
+    ======= >>>>>>> parent of 5d4053c ( yang kedua)
   </body>
 </html>
