feat :lat table nambah symantic

--- a/Table.html
+++ b/Table.html
@@ -8,21 +8,26 @@
   </head>
   <body>
     <table>
-      <tr>
-        <th>Negara</th>
-        <th>Kota</th>
-        <th>Jumlah</th>
-      </tr>
-      <tr>
-        <td>Tiongkok</td>
-        <td>Beijing</td>
-        <td>20.0000</td>
-      </tr>
-      <tr>
-        <td>Rusia</td>
-        <td>Bejing</td>
-        <td>10.000</td>
-      </tr>
+      <thead>
+        <tr>
+          <th>Negara</th>
+          <th>Kota</th>
+          <th>Jumlah</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Tiongkok</td>
+          <td>Beijing</td>
+          <td>20.0000</td>
+        </tr>
+        <tr>
+          <td>Rusia</td>
+          <td>Bejing</td>
+          <td>10.000</td>
+        </tr>
+      </tbody>
+      <tfoot></tfoot>
     </table>
   </body>
 </html>
