--- a/Table.html
+++ b/Table.html
@@ -7,6 +7,19 @@
     <title>Table</title>
   </head>
   <body>
+    <table></table>
+    <hr />
+    <table>
+      <tr>
+        <th rowspan="2">Tahun</th>
+        <th colspan="3">Moriss 2020</th>
+      </tr>
+      <tr>
+        <th>Populasi</th>
+        <th>nama</th>
+        <th>lokasi</th>
+      </tr>
+    </table>
     <table>
       <thead>
         <tr>
