--- a/Table.html
+++ b/Table.html
@@ -9,7 +9,7 @@
   <body>
     <table></table>
     <hr />
-    <table>
+    <table border="2">
       <tr>
         <th rowspan="2">Tahun</th>
         <th colspan="3">Moriss 2020</th>
@@ -19,6 +19,16 @@
         <th>nama</th>
         <th>lokasi</th>
       </tr>
+      <tbody>
+        <tr>
+          <th rowspan="2">7000</th>
+          <th rowspan="2">1000</th>
+        </tr>
+        <tr>
+          <th>yodeda</th>
+          <th>amereia</th>
+        </tr>
+      </tbody>
     </table>
     <table>
       <thead>
@@ -42,5 +52,41 @@
       </tbody>
       <tfoot></tfoot>
     </table>
+    <h1>Form Isian</h1>
+    <form action="#" method="post">
+      <div>
+        <label for="">Nama</label>
+        <input type="text" placeholder="nama" id="text" /><br />
+      </div>
+      <div>
+        <label for="">Email</label>
+        <input type="email" placeholder="email" id="email" /><br />
+      </div>
+      <div>
+        <label for="">Paswword</label>
+        <input type="password" placeholder="password" id="password" /><br />
+      </div>
+      <div>
+        <label for="">CP</label>
+        <input type="number" placeholder="number" id="number" /><br />
+      </div>
+
+      <button type="button">Kirim</button>
+    </form>
+    <h1>pesanan</h1>
+    <input type="checkbox" name="ulangan" id="" /><br />
+    <input type="radio" name="" id="" />kemeja
+    <input type="radio" name="" id="" />tas <br />
+    <label for="ukuran" id="ukur">ukuran</label>
+    <div>
+      <label for="note"></label>
+      <textarea name="" id="" cols="30" rows="5"></textarea>
+    </div>
+
+    <h1>validasi</h1>
+    <form action="valid">
+      <input type="text" required name="input" minlength="3" maxlength="5" />
+      <button type="submit">kirim</button>
+    </form>
   </body>
 </html>
