--- a/index.html
+++ b/index.html
@@ -1,41 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Bootstrap demo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playwrite+AU+SA:wght@100..400&family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+
+    <link rel="stylesheet" href="app.css" />
   </head>
   <body>
-    <h1>Belajar CSS</h1>
-    <hr />
-    <p>
-      <a href="#">Lorem ipsum dolor s</a> it amet consectetur adipisicing elit.
-      Ipsum laboriosam suscipit veritatis unde inventore dolores impedit
-      molestiae soluta mollitia voluptates temporibus incidunt nihil ipsa
-      dolorem quos, deleniti distinctio culpa voluptas?
-    </p>
-    <h2>Sejarah</h2>
-    <hr />
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque
-      debitis delectus commodi veritatis maxime, quasi aperiam dicta possimus
-      quos excepturi quaerat quidem. A cupiditate earum culpa delectus dolor
-      iste cum.
-    </p>
-    <h3>Inline</h3>
-    <hr />
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel libero facere
-      doloremque officia. Inventore iusto ratione enim corporis maxime magnam
-      voluptas dolor quis tenetur, esse, corrupti accusamus accusantium aperiam
-      expedita?
-    </p>
-    <hr />
-    <div>
-        
-    </div>
-    </div>
+    <nav class="navbar navbar-expand-lg" id="navbar">
+      <section class="container-fluid px-0">
+        <div class="row">
+          <div class="col-lg-6">
+            <div><h1>Komputer</h1></div>
+          </div>
+          <div class="col-lg-6"></div>
+          <img class="image-fluid" src="images/img1.jpg" alt="" />
+        </div>
+      </section>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Komputer</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#home">Home</a>
+            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="#ticket">Tiket</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
