--- a/index.html
+++ b/index.html
@@ -20,38 +20,63 @@
     <link rel="stylesheet" href="app.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg" id="navbar">
-      <section class="container-fluid px-0">
-        <div class="row">
-          <div class="col-lg-6">
-            <div><h1>Komputer</h1></div>
+    <nav class="navbar navbar-expand-lg" id="navbar"></nav>
+    <section class="container-fluid px-0">
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div class="text-blue text-center d-none d-lg-block" id="title-head">
+            <h1>Komputer</h1>
+            <h1>Komputer</h1>
+            <h1>Komputer</h1>
+            <h1>Komputer</h1>
+            <h1>Komputer</h1>
+            <h1>Komputer</h1>
           </div>
-          <div class="col-lg-6"></div>
-          <img class="image-fluid" src="images/img1.jpg" alt="" />
         </div>
-      </section>
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Komputer</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#home">Home</a>
-            <a class="nav-link" href="#about">About</a>
-            <a class="nav-link" href="#ticket">Tiket</a>
+        <div class="col-md-6">
+          <img class="img-fluid" src="images/img2.jpg" alt="" />
+        </div>
+      </div>
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <img class="img-fluid" src="images/img1" alt="" />
+        </div>
+        <div class="col-md-6">
+          <div class="row justify-content-center">
+            <h2>Museum of acr</h2>
+            <img src="images/img4.jpg" height="50" alt="" />
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+              sapiente ex vero iste necessitatibus, eligendi libero quae
+              reprehenderit laboriosam perspiciatis voluptate non corporis
+              velit, nulla delectus nihil quos dignissimos minus.
+            </p>
           </div>
         </div>
       </div>
-    </nav>
+    </section>
+
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Komputer</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="#home">Home</a>
+          <a class="nav-link" href="#about">About</a>
+          <a class="nav-link" href="#ticket">Tiket</a>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
